# where-quantum-lives

./: .gitignore  README.md  pyproject.toml
analysis/: dwell_quality_correlation.py  dwell_quality_correlation_v2.py  ff49_financial_summary.py  financial_metrics.py  per_chain_strength_split.py  qpu_replacement_ablation.py  reconstruct_pnl.py  timing_breakdown.py  verify_table5_determinism.py  wilcoxon_cqm_vs_bqm.py
data/raw/: equities
results/analysis/: daily_pnl_index.csv  daily_pnl_summary.txt  dwell_correlation_v2_summary.txt  dwell_cross_cell.csv  dwell_quality_correlation.csv  dwell_quality_correlation_summary.json  dwell_within_cell.csv  ff49_financial_summary.csv  ff49_financial_summary.txt  per_chain_strength_split.csv  per_chain_strength_split_table.tex  qpu_replacement_ablation.csv  table5_cell_verification.csv  table5_cell_verification_summary.txt  timing_breakdown.csv  timing_breakdown_table.tex  wilcoxon_cqm_vs_bqm.csv  wilcoxon_cqm_vs_bqm_summary.txt
scripts/: generate_figures.py  generate_gap_figure.py  generate_hybrid_blackbox_figure.py  run_classical_baselines.py  run_equity_qpu.py  run_hybrid_budget_sweep.py  run_penalty_robustness.py  run_repeated_hybrid.py  run_synthetic_hybrid.py  run_synthetic_qpu.py
src/paper2/: __init__.py  datasets.py  figures.py  formulations.py
src/paper2/analysis/: __init__.py
src/paper2/benchmark/: __init__.py  result_schema.py  runner.py
src/paper2/solvers/: __init__.py  base.py  dwave_hybrid_bqm.py  dwave_hybrid_cqm.py  dwave_qpu.py  embedding_cache.py
tests/: test_datasets.py  test_formulations.py  test_hybrid_solvers.py
