[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper2"
version = "0.1.0"
description = "Research code for the paper 'Where the Quantum Lives in D-Wave Hybrid Portfolio Optimization: An Operational Decomposition Audit'."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Luis Lozano", email = "lalozanom@tec.mx" },
]
keywords = [
  "portfolio optimization",
  "cardinality constraint",
  "quantum-classical hybrid solver",
  "benchmarking",
  "D-Wave",
  "mean-variance-turnover",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "paper1",
]

[project.urls]
"Preprint (arXiv)"  = "https://arxiv.org/abs/2605.17623"
"ORCID"             = "https://orcid.org/0000-0001-7202-3437"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
qpu = [
  "dimod==0.12.21",
  "dwave-networkx==0.8.18",
  "dwave-system==1.34.0",
  "minorminer==0.2.21",
  "dwave-hybrid==0.6.15",
  "dwave-samplers==1.7.0",
]
hybrid = [
  "dwave-system==1.34.0",
  "dimod==0.12.21",
]
results = [
  "pyarrow>=15",
]
classical = [
  "gurobipy>=11",
  "ortools>=9.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../paper1/src"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "live_qpu: tests that require live QPU credentials and solver access",
  "live_hybrid: tests that require D-Wave hybrid solver access",
  "slow: slower-running offline tests",
  "integration: tests that exercise multiple modules together",
]
